tests/swift/input/test5.swift
// RUN: %not %neal %args | %check

//CHECK: error:\d+ Header doc typo

/// header doc
//
